--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@materializecss/materialize": "^2.1.0",
+    "@types/materialize-css": "^1.0.14",
     "jquery": "^3.7.1"
   }
 }
